fixed advancement alignment

--- a/die.css
+++ b/die.css
@@ -100,7 +100,7 @@ input[type="radio"][value="6"]:checked ~ div.sheet-Master
 .advancement-grid
 {
 	display: grid;
-	grid-template: repeat(12, 1fr)/15% repeat(5, 1fr) 15%;
+	grid-template: repeat(12, 1fr)/15% 7% 6% 14% 5% 5% 6% 4% 5% 16% 2% 15%;
 	grid-column: 2/span 1;
 	grid-row: 1/span 1;
 	align-items: center;
@@ -108,7 +108,7 @@ input[type="radio"][value="6"]:checked ~ div.sheet-Master
 
 .advancement-image
 {
-	grid-column: 2/span 5;
+	grid-column: 2/span 10;
 	grid-row: 1/span 12;
 	height: 100%;
 	width: 100%;
